<resources>
    <string name="app_name">I Am Here!</string>
    <string name="login">E-mail Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register a new account</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="nickname">Nickname</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone number</string>
    <string name="Ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="group_name">Group name</string>
    <string name="nickname1">Nickname: </string>
    <string name="name1">Name: </string>
    <string name="surname1">Surname: </string>
    <string name="phone1">Phone: </string>
    <string name="email1">E-mail: </string>
    <string name="refresh">Refresh</string>
    <string name="chat">Chat</string>
    <string name="map">Map</string>
    <string name="contacts">Contacts</string>
    <string name="message_compose">Compose the message</string>
    <string name="include_image">Include map snapshot?</string>
    <string name="additional_hint">Type your additional text here...</string>
    <string name="emailNormal">Email</string>
    <string name="message">Message</string>
    <string name="Messenger">Messenger</string>
    <string name="dialog_selector_title">Pick groups</string>
    <string name="select_groups">Select groups...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
