<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asd.iamhere.ChooseFragment">

    <ImageButton
        android:id="@+id/chat_button"
        android:layout_width="141dp"
        android:layout_height="130dp"
        android:background="@null"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@mipmap/ic_chat"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/title_choose_1" />

    <TextView
        android:id="@+id/text_chat_1"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:text="@string/chat"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_button"
        tools:layout_editor_absoluteY="259dp" />

    <ImageButton
        android:id="@+id/map_button"
        android:layout_width="128dp"
        android:layout_height="125dp"
        android:background="@null"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@mipmap/ic_map_button"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/text_chat_1" />

    <TextView
        android:id="@+id/title_choose_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="37dp"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_map_1"
        android:layout_width="132dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/map"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_button"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>